# CyberFence-Endpoint-Agent

./: .gitignore  Cargo.toml  INTEGRATION.md  README.md  config.toml  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: ci.yml
agent/: Cargo.toml
agent/src/: ipc_server.rs  main.rs  service.rs  state.rs
agent/tests/: monitor_integration.rs
crates/cf-common/: Cargo.toml
crates/cf-common/src/: errors.rs  events.rs  lib.rs  scan.rs
crates/cf-config/: Cargo.toml
crates/cf-config/src/: lib.rs
crates/cf-ipc/: Cargo.toml
crates/cf-ipc/src/: client.rs  lib.rs  protocol.rs  server.rs
crates/cf-logger/: Cargo.toml
crates/cf-logger/src/: event_logger.rs  lib.rs  subscriber.rs
crates/cf-monitor/: Cargo.toml
crates/cf-monitor/src/: debounce.rs  filter.rs  lib.rs  watcher.rs
crates/cf-scanner/: Cargo.toml
crates/cf-scanner/src/: clamav.rs  engine.rs  full_scan.rs  lib.rs  quarantine.rs  scan_logger.rs  worker.rs
crates/cf-scanner/tests/: scanner_integration.rs
installer/: SIGNING.md
installer/idt/: BinaryAdd.idt  Binary_bitmaps.idt  Binary_streams.idt  Control.idt  ControlEvent.idt  Dialog.idt  InstallUISequence.idt  LaunchCondition.idt  LaunchCondition_current.idt  LaunchCondition_v030.idt  Property_full.idt  Property_v021.idt  Property_v030.idt  TextStyle.idt
installer/resources/: License.rtf  check_clamav.vbs  warn_no_clamav.vbs
installer/scripts/: build-wixl.sh  build.ps1
installer/wix/: Product.wxs  Product_wixl.wxs
ui/: package.json  svelte.config.js  vite.config.ts
ui/src/: app.css  app.html
ui/src-tauri/: Cargo.toml  tauri.conf.json
ui/src-tauri/icons/: icon.icns
ui/src-tauri/src/: commands.rs  lib.rs  log_reader.rs  main.rs  mock.rs  tray.rs
ui/src/lib/: api.ts  types.ts
ui/src/lib/stores/: index.ts  status.ts
ui/src/routes/: +layout.svelte  +page.svelte
ui/src/routes/history/: +page.svelte
ui/src/routes/scan/: +page.svelte
ui/src/routes/settings/: +page.svelte
ui/src/routes/threats/: +page.svelte
