[workspace]
resolver = "2"
members = [
    "crates/cf-common",
    "crates/cf-config",
    "crates/cf-monitor",
    "crates/cf-logger",
    "crates/cf-scanner",
    "agent",
]

[workspace.package]
version     = "0.1.0"
edition     = "2021"
authors     = ["CyberFence Engineering <eng@cyberfenceplatform.com>"]
license     = "UNLICENSED"
repository  = "https://github.com/mrperez122/CyberFence-Endpoint-Agent"

[workspace.dependencies]
# Async runtime
tokio       = { version = "1.36", features = ["full"] }

# Serialization
serde       = { version = "1.0", features = ["derive"] }
serde_json  = "1.0"

# Error handling
anyhow      = "1.0"
thiserror   = "1.0"

# Logging
tracing             = "0.1"
tracing-subscriber  = { version = "0.3", features = ["env-filter", "json", "chrono"] }

# File watching
notify   = "6.1"
walkdir  = "2.5"

# Config
toml    = "0.8"

# Time
chrono  = { version = "0.4", features = ["serde"] }

# Utilities
uuid    = { version = "1.7", features = ["v4", "serde"] }

[profile.release]
opt-level     = 3
lto           = true
codegen-units = 1
strip         = "symbols"
panic         = "abort"
