[package]
name        = "cf-agent"
description = "CyberFence Endpoint Protection Agent — background service binary"
version.workspace = true
edition.workspace = true
authors.workspace = true

[[bin]]
name = "cf-agent"
path = "src/main.rs"

[dependencies]
cf-common   = { path = "../crates/cf-common" }
cf-config   = { path = "../crates/cf-config" }
cf-monitor  = { path = "../crates/cf-monitor" }
cf-logger   = { path = "../crates/cf-logger" }
cf-scanner  = { path = "../crates/cf-scanner" }

tokio       = { workspace = true }
anyhow      = { workspace = true }
tracing     = { workspace = true }

tokio-util   = { workspace = true }

[target.'cfg(windows)'.dependencies]
windows-service = { workspace = true }

[dev-dependencies]
tempfile = "3.10"
tokio    = { workspace = true }
uuid     = { workspace = true }
