[package]
name        = "cf-common"
description = "Shared types, event definitions, and error types for the CyberFence agent"
version.workspace     = true
edition.workspace     = true
authors.workspace     = true

[dependencies]
serde       = { workspace = true }
serde_json  = { workspace = true }
thiserror   = { workspace = true }
chrono      = { workspace = true }
uuid        = { workspace = true }
