[package]
name        = "cf-config"
description = "Configuration loading and validation for the CyberFence agent"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
cf-common   = { path = "../cf-common" }
serde       = { workspace = true }
toml        = { workspace = true }
anyhow      = { workspace = true }
tracing     = { workspace = true }
