[package]
name        = "cf-scanner"
description = "CyberFence Engine (ClamAV) malware scanning for the endpoint agent"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
cf-common   = { path = "../cf-common" }
cf-config   = { path = "../cf-config" }
tokio       = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
anyhow      = { workspace = true }
thiserror   = { workspace = true }
tracing     = { workspace = true }
chrono      = { workspace = true }
uuid        = { workspace = true }
walkdir     = "2.5"
aes-gcm     = "0.10"

[target.'cfg(target_os = "windows")'.dependencies]
windows     = { version = "0.56", features = [
    "Win32_Security_Cryptography",
    "Win32_System_Memory",
    "Win32_Foundation",
] }

[dev-dependencies]
tempfile    = "3.10"
tokio       = { workspace = true }
